{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 72,
  "lineage": "705d1173-cd21-71a1-7437-839b0ca6c76e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382550844:internet-gateway/igw-08c5137d77ed174a3",
            "id": "igw-08c5137d77ed174a3",
            "owner_id": "992382550844",
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform"
            },
            "vpc_id": "vpc-07e89d7ced225684f"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hello_world_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382550844:loadbalancer/app/hello-world-lb/25d6cf8eafbaf1cb",
            "arn_suffix": "app/hello-world-lb/25d6cf8eafbaf1cb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hello-world-lb-1926565934.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382550844:loadbalancer/app/hello-world-lb/25d6cf8eafbaf1cb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hello-world-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d749b0f73b0caa02"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-044a30eab0746694e"
              },
              {
                "subnet_id": "subnet-0607449deda61c0d3"
              }
            ],
            "subnets": [
              "subnet-044a30eab0746694e",
              "subnet-0607449deda61c0d3"
            ],
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform"
            },
            "vpc_id": "vpc-07e89d7ced225684f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.demo",
            "aws_subnet.demo",
            "aws_subnet.demo1",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hello_world_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382550844:listener/app/hello-world-lb/25d6cf8eafbaf1cb/ee281618ac019222",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382550844:targetgroup/hello-world-tg/d7852ceb1a4b6f55",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382550844:listener/app/hello-world-lb/25d6cf8eafbaf1cb/ee281618ac019222",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:992382550844:loadbalancer/app/hello-world-lb/25d6cf8eafbaf1cb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hello_world_lb",
            "aws_lb_target_group.hello_world_tg",
            "aws_security_group.demo",
            "aws_subnet.demo",
            "aws_subnet.demo1",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hello_world_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382550844:targetgroup/hello-world-tg/d7852ceb1a4b6f55",
            "arn_suffix": "targetgroup/hello-world-tg/d7852ceb1a4b6f55",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382550844:targetgroup/hello-world-tg/d7852ceb1a4b6f55",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hello-world-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07e89d7ced225684f"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382550844:security-group/sg-0d749b0f73b0caa02",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d749b0f73b0caa02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240607193328355200000001",
            "name_prefix": "terraform-",
            "owner_id": "992382550844",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e89d7ced225684f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382550844:subnet/subnet-044a30eab0746694e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044a30eab0746694e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382550844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform"
            },
            "vpc_id": "vpc-07e89d7ced225684f"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382550844:subnet/subnet-0607449deda61c0d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0607449deda61c0d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382550844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform"
            },
            "vpc_id": "vpc-07e89d7ced225684f"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382550844:vpc/vpc-07e89d7ced225684f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065f6fdf498d32c70",
            "default_route_table_id": "rtb-0eeeba627adea3300",
            "default_security_group_id": "sg-0ce919372051a0aaf",
            "dhcp_options_id": "dopt-07c9db737db98ed56",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e89d7ced225684f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eeeba627adea3300",
            "owner_id": "992382550844",
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform"
            }
          }
        }
      ]
    }
  ]
}